[tool.poetry]
name = "news_project"
version = "0.1.0"
description = "Summarize the content of your favorite news feeeds and get the summary send yo you once a week."
authors = ["patrickleonardy <patrick.leonardy@outlook.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.17.2"
langchain = "0.2.3"
feedparser = "^6.0.11"
streamlit = "^1.39.0"
tinydb = "^4.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
